--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style>
 
 body {
-  background-image: url("https://www.w3schools.com/howto/img_link_tree_template1_bg.jpg"); /* The image used for background */
+  background-image: url("Yupik.jpg"); /* The image used for background */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
