--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ a {
       <!-- Image and name container. Change to your picture here. -->
       <div class="" style="text-align: center">
         <img src="fish.webp" class="w3-round" alt="person image" width="250px" height="250px" style="border-radius: 50%; border: 5px solid #4ab6e0 !important; margin-top: 16px;">
-        <p class="name"><br><span class="w3-padding w3-theme-l1 w3-margin w3-round" style="font-weight: bolder; font-size: x-large; border: 3px solid #1b7a9f;">Welcome, I'm Matt!</span></p><br>
+        <p class="name"><br><span class="w3-padding w3-theme-l1 w3-margin w3-round" style="font-weight: bolder; font-size: x-large; border: 3px solid #1b7a9f;">🎣 Enjoying Life & Chasing Bass On A Small Plastic Bass Boat! 🎣</span></p><br>
         <p><span class="profession w3-padding w3-theme-d5 w3-round" style="font-weight: bolder; border: 3px solid #d0ecf7;">I am a mountain climber!</span></p><br>
       </div>
 
