--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ html, body {
     max-width: 540px;
 	height: 100%;
 	margin-top: 0;
-	background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.75), rgba(0,0,0,0));
+	background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.75), rgba(0,0,0,0));
+	background: -webkit-linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.75), rgba(0,0,0,0));
 	z-index: 1;
   }
 
