--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@ html, body {
   background-size: cover; /*cover;  Resize the background image to cover the entire container */
   font-family: "gothic a1";
   height: 100%;
-  padding: 0;
-  margin: 0;
   
 }
 
@@ -29,6 +27,7 @@ html, body {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: -10px;
   background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.75), rgba(0,0,0,0));
   background: -webkit-linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0.75), rgba(0,0,0,0));
   z-index: 1;
@@ -63,7 +62,6 @@ html, body {
   .container {
     max-width: 540px;
 	height: 100%;
-	margin-top: 0;
   }
 
   .profession {
