--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ html, body {
   background-size: cover; /*cover;  Resize the background image to cover the entire container */
   font-family: "gothic a1";
   height: 100%;
+  margin: 0;
   
 }
 
